# disnake-components

./: README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: config.yml
disnake_components/: client.py  const.py  interaction.py
examples/: basic.py  cog.py  event.py  paginator.py
