[tool.poetry]
name = "disnake-components"
version = "1.0.0"
description = "An unofficial library for disnake components."
authors = ["SSKATE <me@sskate.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
disnake = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
